--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-MediaTomb (Must Not Die Edition) - UPnP MediaServer
+MediaTomb REd (Reborn Edition) - UPnP MediaServer
 
    This documentation is valid for MediaTomb version 0.12.2.
 
