--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-MediaTomb (Must Not Die Edition) - UPnP AV Mediaserver.
+MediaTomb REd(Reborn Edition) - UPnP AV Mediaserver.
 v0.12.2 12.10.2012
 	* fixed Youtube service support (got broken after they updated their
           website ans video url)
